[project]
name = "applemusicapi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.2",
    "polars>=1.9.0",
    "python-multipart>=0.0.12",
    "uvicorn>=0.31.1",
]

[tool.uv]
dev-dependencies = [
    "pyright>=1.1.384",
    "pytest>=8.3.3",
    "ruff>=0.6.9",
]
